fix missing bars, improve colors & fix label overflow

--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,12 @@
 
 @theme {
    --color-text: hsl(246, 76%, 95%);
-   --color-background: hsl(240, 60%, 1%);
+   --color-background: hsl(240, 60%, 13%);
    --color-primary: hsl(243, 79%, 45%);
-   --color-secondary: hsl(243, 100%, 12%);
-   --color-accent: hsl(242, 100%, 83%);
-   --color-orange: hsl(37, 100%, 65%);
+   --color-secondary: hsl(143, 50%, 20%);
+   --color-accent: hsl(242, 100%, 93%);
+   --color-orange: hsl(37, 100%, 80%);
+   --color-green: hsl(120, 100%, 50%);
 
 
    --font-display: "Roboto", sans-serif;
